Page d'accueil + inscription + connexion + deconnexion

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+$primary-color: #E64833;
+$secondary-color: #244855;
+$accent-color: #90AEAD;
+$background-light: #FBE9D0;
+$text-dark: #28293e;
+$text-light: white;
+$hover-color: darken($primary-color, 10%);
