--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <nav>
-      <ul class="nav-list">
+      <ul class="nav-list" *ngIf="isLoggedIn">
         <li class="nav-item">
           <a [routerLink]="'/programmes-sportifs'" class="nav-link">Programmes Sportifs</a>
         </li>
