--- a/src/app/components/register-step1/register-step1.component.html
+++ b/src/app/components/register-step1/register-step1.component.html
@@ -8,25 +8,29 @@
     <form #registerForm="ngForm" (ngSubmit)="nextStep(registerForm)" novalidate>
       <div class="input-group" [class.invalid]="firstName.invalid && formSubmitted">
         <label for="firstName">Prénom</label>
-        <input type="text" id="firstName" [(ngModel)]="user.firstName" name="firstName" placeholder="Ex: Alex" required #firstName="ngModel">
+        <input type="text" id="firstName" [(ngModel)]="user.firstName" name="firstName" placeholder="Ex: Alex" required
+               #firstName="ngModel">
         <div *ngIf="firstName.invalid && formSubmitted" class="error">Ce champ est requis.</div>
       </div>
 
       <div class="input-group" [class.invalid]="lastName.invalid && formSubmitted">
         <label for="lastName">Nom</label>
-        <input type="text" id="lastName" [(ngModel)]="user.lastName" name="lastName" placeholder="Ex: Dupont" required #lastName="ngModel">
+        <input type="text" id="lastName" [(ngModel)]="user.lastName" name="lastName" placeholder="Ex: Dupont" required
+               #lastName="ngModel">
         <div *ngIf="lastName.invalid && formSubmitted" class="error">Ce champ est requis.</div>
       </div>
 
       <div class="input-group" [class.invalid]="email.invalid && formSubmitted">
         <label for="email">Email</label>
-        <input type="email" id="email" [(ngModel)]="user.email" name="email" placeholder="Ex: alex.dupont@email.com" required email #email="ngModel">
+        <input type="email" id="email" [(ngModel)]="user.email" name="email" placeholder="Ex: alex.dupont@email.com"
+               required email #email="ngModel">
         <div *ngIf="email.invalid && formSubmitted" class="error">Email invalide ou requis.</div>
       </div>
 
       <div class="input-group" [class.invalid]="password.invalid && formSubmitted">
         <label for="password">Mot de passe</label>
-        <input type="password" id="password" [(ngModel)]="user.password" name="password" placeholder="********" required minlength="6" #password="ngModel">
+        <input type="password" id="password" [(ngModel)]="user.password" name="password" placeholder="********" required
+               minlength="6" #password="ngModel">
         <div *ngIf="password.invalid && formSubmitted" class="error">
           <span *ngIf="password.errors?.required">Ce champ est requis.</span>
           <span *ngIf="password.errors?.minlength">Minimum 6 caractères.</span>
