--- a/src/app/components/program-sportif/program-sportif.component.scss
+++ b/src/app/components/program-sportif/program-sportif.component.scss
@@ -41,6 +41,7 @@
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin: 0 20px;
 
     &:hover {
       transform: translateY(-8px);
