--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   box-sizing: border-box;
-  padding: 10px 40px; // moins de padding vertical pour réduire la hauteur
-  background-color: #333; // fond solide identique à celui du footer
+  padding: 10px 40px;
+  background-color: #333;
   z-index: 10;
   transition: background-color 0.3s ease;
 
@@ -13,7 +13,7 @@
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
-    padding: 0 15px; // pour éviter le débordement sur les bords
+    padding: 0 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,7 +59,7 @@
     .btn {
       margin-left: 15px;
       font-size: 18px;
-      font-family: 'Montserrat', sans-serif; // nouvelle police pour les boutons
+      font-family: 'Montserrat', sans-serif;
       background: none;
       border: 1px solid #fff;
       color: #fff;
